2nd Advanced E-Portfolio commit.

--- a/index.html
+++ b/index.html
@@ -4,36 +4,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/83bc4c6e48.js" crossorigin="anonymous"></script>
   <title>Timothy Olofson</title>
 </head>
 <body>
   <section id="landing-page">
+
+    <!-- NAVIGATION -->
+
     <nav>
       <figure><img id="personal-logo" src="assets/MyE-PortfolioLogo_FES.png" alt="My Logo"></figure>
       <ul class="nav__link--list">
         <li class="nav__link">
-          <a class="
+          <a href="#" class="
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
-          " href="#">About</a>
+          ">About</a>
         </li>
-        <li class="nav__link">
+        <li href="#" class="nav__link">
           <a class="
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
-          " href="#">Projects</a>
+          ">Projects</a>
         </li>
-        <li class="nav__link">
+        <li href="#" class="nav__link">
           <a class="
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
-          " href="#">Contact</a>
+          ">Contact</a>
+        </li>
+        <li href="#" class="nav__link">
+          <a class="
+            nav__link--anchor
+            link__hover-effect
+            link__hover-effect--black
+          "><i class="fa-solid fa-circle-half-stroke"></i></a>
         </li>
       </ul>
     </nav>
+
+    <!-- HEADER -->
+
+    <header class="header">
+      <div class="header__content">
+        <h1 class="title">Hi,</h1>
+        <h1 class="title blue">I'm Tim.</h1>
+        <p class="header__para">
+          I'm A <b class="blue">Frontend Software Engineer</b> with A strong passion for building web applications with great user experiences.
+        <br>Here's more <b class="blue">about me.</b>
+        </p>
+        <div class="social__links"><a href="#" class="social__link"><i class="fa-brands fa-linkedin"></i></a></div>
+      </div>
+    </header>
   </section>
 </body>
 </html>
