--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             link__hover-effect--black
           ">Contact</a>
         </li>
-        <li href="#" class="nav__link">
+        <li href="#" class="nav__link click">
           <a class="
             nav__link--anchor
             link__hover-effect
@@ -56,9 +56,14 @@
           I'm A <b class="blue">Frontend Software Engineer</b> with A strong passion for building web applications with great user experiences.
         <br>Here's more <b class="blue">about me.</b>
         </p>
-        <div class="social__links"><a href="#" class="social__link"><i class="fa-brands fa-linkedin"></i></a></div>
+        <div class="social__links">
+          <a href="#" class="social__link click"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#" class="social__link click"><i class="fa-brands fa-github"></i></a>
+          <a href="#" class="social__link click"><i class="fa-regular fa-file-pdf"></i></a>
+        </div>
       </div>
     </header>
+      <button class="mail__btn click"><i class="fa-solid fa-envelope"></i></button>
   </section>
 </body>
 </html>
