4th Advanced E-Portfolio commit.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
       </div>
     </header>
       <button class="mail__btn click"><i class="fa-solid fa-envelope"></i></button>
+      <a href="#projects" class="scroll"><div class="scroll__icon click"></div></a>
+  </section>
+  <section id="projects">
+    <div class="container">
+      <div class="row">
+        <h1 class="section__title">Here are some of my <span class="blue">projects</span></h1>
+        <ul class="projects">
+          <li class="project">
+            <div class="project__wrapper">
+              <img class="project_img" src="assets/undraw_programming_re_kg9v.svg" alt="Man on A desktop computer">
+              <div class="project__wrapper--bg">
+                
+              </div>
+              <div class="project__description">
+                <h3 class="project__description--title">Car Sales Project</h3>
+                <h4 class="project__description--sub-title">HTML, CSS, Javascript, React</h4>
+                <p class="project__description--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quasi voluptates architecto suscipit inventore exercitationem possimus quos sunt repellat beatae, officiis similique quaerat facere! Quibusdam pariatur cupiditate itaque omnis laborum.</p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link"><i class="fa-brands fa-github"></i></a>
+                  <a href="#" class="project__description--link"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </section>
 </body>
 </html>
