--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+Timothy Olofson
+11/21/20024
+Fromtend Simplified FES
+Week 4 - Advanced E-Portfolio
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +12,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/83bc4c6e48.js" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+        emailjs.init("NBhrdQIgGtK1W9U0K");
+    })();
+  </script>
   <title>Timothy Olofson</title>
 </head>
 <body>
@@ -88,21 +102,25 @@
       <div class="modal__half modal__contact">
         <h3 class="modal__title moddal__title--contact">Let's Have A Chat!</h3>
         <h4 class="modal__sub-title modal__sub-title--contact">I'm currently open to new opportunities.</h4>
-        <form id="contact__form" action="">
+        <form id="contact__form" onsubmit="contact(event)"></form>
           <div class="form__item">
             <label class="form__item--label">Name</label>
-            <input class="input" name="user_name" type="text" required>
+            <input class="input" id="name" name="user_name" type="text" required>
           </div>
           <div class="form__item">
             <label class="form__item--label">Email</label>
-            <input class="input" name="user_email" type="email" required>
+            <input class="input" id="email" name="user_email" type="email" required>
           </div>
           <div class="form__item">
             <label class="form__item--label">Message</label>
-            <textarea class="textbox" name="message" type="text" required>Type here...</textarea>
+            <textarea class="input message" id="message" name="message" type="text" required></textarea>
           </div>
+          <button class="form__submit" id="contact__submit" type="submit" onclick="sendForm()">Send it my way!</button>
         </form>
+        <div class="modal__overlay modal__overlay--loading"><i class="fa-solid fa-spinner"></i></div>
+        <div class="modal__overlay modal__overlay--success">Thanks for messaging me! Looking forward to speaking to you soon!!</div>
       </div>
+      <i class="fa-solid fa-xmark modal__exit click"></i>
     </div>
   </section>
   <section id="projects">
