7th Advanced E-Portfolio commit.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Week 4 - Advanced E-Portfolio
         </div>
       </div>
     </header>
-    <button class="mail__btn click"><i class="fa-solid fa-envelope"></i></button>
+    <button class="mail__btn click" onclick="toggleModal()"><i class="fa-solid fa-envelope"></i></button>
     <a href="#projects" class="scroll"><div class="scroll__icon click"></div></a>
     <div class="modal">
       <div class="modal__half modal__about">
